Add unit tests for FilterPersonCommandTest